bindings/java/src/main/java/io/github/ggerganov/whispercpp/CrispasrSession.java


        // Language detection (whisper context)
        float crispasr_detect_language(Pointer ctx, float[] pcm, int nSamples,
                                       int nThreads, byte[] outCode, int outCap);

        // VAD slices
        int crispasr_vad_slices(String vadModelPath, float[] pcm, int nSamples,
                                int sampleRate, float threshold, int minSpeechMs, int minSilenceMs,
                                int speechPadMs, float maxChunkDurationS, int nThreads,
                                Pointer[] outSpans);

        // LCS dedup
        int crispasr_lcs_dedup_prefix_count(int[] prevTailTokens, int nPrev,
                                            int[] currTokens, int nCurr, int minLcsLength);

        // Direct Parakeet API
        Pointer crispasr_parakeet_init(String modelPath, int nThreads, int useFlash);
        void    crispasr_parakeet_free(Pointer ctx);
        Pointer crispasr_parakeet_transcribe(Pointer ctx, float[] pcm, int nSamples, String language);
        String  crispasr_parakeet_result_text(Pointer r);
        int     crispasr_parakeet_result_n_words(Pointer r);
        String  crispasr_parakeet_result_word_text(Pointer r, int i);
        long    crispasr_parakeet_result_word_t0(Pointer r, int i);
        long    crispasr_parakeet_result_word_t1(Pointer r, int i);
        int     crispasr_parakeet_result_n_tokens(Pointer r);
        String  crispasr_parakeet_result_token_text(Pointer r, int i);
        long    crispasr_parakeet_result_token_t0(Pointer r, int i);
        long    crispasr_parakeet_result_token_t1(Pointer r, int i);
        float   crispasr_parakeet_result_token_p(Pointer r, int i);
        void    crispasr_parakeet_result_free(Pointer r);

        // TitaNet
        Pointer crispasr_titanet_init(String modelPath, int nThreads);
        void    crispasr_titanet_free(Pointer ctx);
        int     crispasr_titanet_embed(Pointer ctx, float[] pcm16k, int nSamples, float[] out);
        float   crispasr_titanet_cosine_sim(float[] a, float[] b, int dim);

        // Speaker database
        Pointer crispasr_speaker_db_load(String dirPath);
        void    crispasr_speaker_db_free(Pointer db);
        int     crispasr_speaker_db_count(Pointer db);
        float   crispasr_speaker_db_match(Pointer db, float[] embedding, int dim,
                                          float threshold, byte[] outName, int outCap);
        int     crispasr_speaker_db_enroll(String dirPath, String name, float[] embedding, int dim);

        // Pluggable speaker embedder + clustering + pyannote cache
        Pointer crispasr_speaker_embedder_make_abi(String modelSpec, int nThreads, String cacheDir);
        void    crispasr_speaker_embedder_free_abi(Pointer embedder);
        int     crispasr_speaker_embedder_dim_abi(Pointer embedder);
        int     crispasr_speaker_embedder_embed_abi(Pointer embedder, float[] pcm16k, int nSamples, float[] out);
        String  crispasr_speaker_embedder_name_abi(Pointer embedder);
        int     crispasr_speaker_cluster_abi(float[] embeddings, int n, int dim,
                                            float mergeThreshold, int maxSpeakers, int[] labelsOut);
        Pointer crispasr_pyannote_cache_compute_abi(float[] fullAudio, int nSamples,
                                                    String modelPath, int nThreads);
        void    crispasr_pyannote_cache_free_abi(Pointer cache);
        int     crispasr_pyannote_cache_apply_abi(Pointer cache, long sliceT0Cs,
                                                  Pointer segs, int nSegs);

        // Kokoro lang helpers
        boolean crispasr_kokoro_lang_is_german_abi(String lang);
        boolean crispasr_kokoro_lang_has_native_voice_abi(String lang);

        // Backend detection
        int crispasr_detect_backend_from_gguf(String path, byte[] outName, int outCap);

        // RNNoise audio enhancement
        int crispasr_enhance_audio_rnnoise(float[] inPcm, int nSamples, float[] outPcm, int outCap);

        // Diarization
        int crispasr_diarize_segments_abi(float[] leftPcm, float[] rightPcm, int nSamples,
                                          int isStereo, Pointer segs, int nSegs, Pointer opts);

        // Text-LID
        int crispasr_text_detect_language(String text, String modelPath, int nThreads,
                                          byte[] outLabel, int outLabelCap, float[] outConfidence);

        // Registry extras
        int crispasr_registry_lookup_by_filename_abi(String filename, byte[] outFilename, int filenameCap,
                                                     byte[] outUrl, int urlCap, byte[] outSize, int sizeCap);
        int crispasr_registry_list_backends_abi(byte[] outCsv, int outCap);

        // Session extras
        int     crispasr_session_available_backends(byte[] outCsv, int outCap);
        Pointer crispasr_session_open_explicit(String modelPath, String backendName, int nThreads);
        Pointer crispasr_session_open_with_params(String modelPath, String backendName, Pointer params);
        Pointer crispasr_session_transcribe_vad_lang(Pointer session, float[] pcm, int nSamples,
                                                     int sampleRate, String vadModelPath, Pointer opts,
                                                     String language);
        Pointer crispasr_session_translate_text(Pointer session, String text, String srcLang,
                                                String tgtLang, int maxTokens);
        void    crispasr_session_translate_text_free(Pointer text);
        int     crispasr_session_result_word_n_alts(Pointer result, int iSeg, int iWord);
        String  crispasr_session_result_word_alt_text(Pointer result, int iSeg, int iWord, int iAlt);
        float   crispasr_session_result_word_alt_p(Pointer result, int iSeg, int iWord, int iAlt);

        // Streaming (whisper context)
        Pointer crispasr_stream_open(Pointer ctx, int nThreads, int stepMs,
                                     int lengthMs, int keepMs, String language, int translate);
    }

    /**
     * JNA callback for {@code crispasr_mic_callback}. Fired on
     * miniaudio's audio thread. Keep it short and non-blocking — the
     * driver reuses {@code pcm} after this returns. Copy out before
     * any heavy work.
     *
     * <p>Important: a strong reference to the {@code MicCallback}
     * instance must be held by the caller (i.e. the {@link Mic}
     * class) for as long as the device is open. JNA's GC has no idea
     * the C side is holding it.
     */
    public interface MicCallback extends Callback {
        void invoke(Pointer pcm, int nSamples, Pointer userdata);
    }

    private Pointer handle;

    private CrispasrSession(Pointer handle) {
        this.handle = handle;
    }

    /**
     * Open a backend session for the given model file. The backend is
     * detected automatically from the GGUF metadata.
     *
     * @throws IllegalStateException if the model can't be loaded.
     */
    public static CrispasrSession open(String modelPath, int nThreads) {
        Pointer p = Lib.INSTANCE.crispasr_session_open(modelPath, nThreads);
        if (p == null) {
            throw new IllegalStateException("crispasr_session_open: failed to open " + modelPath);
        }
        return new CrispasrSession(p);
    }

    /**
     * Drop the kokoro per-session phoneme cache. No-op for non-kokoro
     * backends. Useful for long-running daemons that resynthesize across
     * many speakers and want bounded memory. (PLAN #56 #5)
     */
    public void clearPhonemeCache() {
        int rc = Lib.INSTANCE.crispasr_session_kokoro_clear_phoneme_cache(handle);
        if (rc != 0) throw new IllegalStateException("clear_phoneme_cache failed (rc=" + rc + ")");
    }

    // ----- Sticky session-state setters (PLAN #59 partial unblock) -----

    /** Sticky source-language hint (canary/cohere/voxtral/whisper). Empty clears. */
    public void setSourceLanguage(String lang) {
        int rc = Lib.INSTANCE.crispasr_session_set_source_language(handle, lang == null ? "" : lang);
        if (rc != 0) throw new IllegalStateException("set_source_language failed (rc=" + rc + ")");
    }

    /** Sticky target-language. ≠ source on canary/cohere ⇒ translation. */
    public void setTargetLanguage(String lang) {
        int rc = Lib.INSTANCE.crispasr_session_set_target_language(handle, lang == null ? "" : lang);
        if (rc != 0) throw new IllegalStateException("set_target_language failed (rc=" + rc + ")");
    }

    /** Toggle punctuation + capitalisation. Default true. */
    public void setPunctuation(boolean enable) {
        int rc = Lib.INSTANCE.crispasr_session_set_punctuation(handle, enable ? 1 : 0);
        if (rc != 0) throw new IllegalStateException("set_punctuation failed (rc=" + rc + ")");
    }

    /** Whisper sticky --translate. */
    public void setTranslate(boolean enable) {
        int rc = Lib.INSTANCE.crispasr_session_set_translate(handle, enable ? 1 : 0);
        if (rc != 0) throw new IllegalStateException("set_translate failed (rc=" + rc + ")");
    }

    /** Decoder temperature on backends with runtime control (canary/cohere/parakeet/moonshine). */
    public void setTemperature(float temperature, long seed) {
        int rc = Lib.INSTANCE.crispasr_session_set_temperature(handle, temperature, seed);
        if (rc != 0 && rc != -2) throw new IllegalStateException("set_temperature failed (rc=" + rc + ")");
    }

    /** Reseed TTS backends that support runtime seed control (soft no-op otherwise). */
    public void setTtsSeed(long seed) {
        int rc = Lib.INSTANCE.crispasr_session_set_tts_seed(handle, seed);
        if (rc != 0 && rc != -2) throw new IllegalStateException("set_tts_seed failed (rc=" + rc + ")");
    }

    /** Generated-token cap for autoregressive session backends. Pass <= 0 to clear. */
    public void setMaxNewTokens(int maxNewTokens) {
        int rc = Lib.INSTANCE.crispasr_session_set_max_new_tokens(handle, maxNewTokens);
        if (rc != 0) throw new IllegalStateException("set_max_new_tokens failed (rc=" + rc + ")");
    }

    /** Opt-in repeated generated-token penalty for autoregressive session backends. Pass <= 0 to disable. */
    public void setFrequencyPenalty(float penalty) {
        int rc = Lib.INSTANCE.crispasr_session_set_frequency_penalty(handle, penalty);
        if (rc != 0) throw new IllegalStateException("set_frequency_penalty failed (rc=" + rc + ")");
    }

    /** Diffusion / CFM step count for diffusion-based TTS backends (chatterbox). Soft no-op otherwise. */
    public void setTtsSteps(int steps) {
        int rc = Lib.INSTANCE.crispasr_session_set_tts_steps(handle, steps);
        if (rc != 0 && rc != -2) throw new IllegalStateException("set_tts_steps failed (rc=" + rc + ")");
    }

    /** Top-p nucleus-sampling threshold. Honoured by chatterbox; other backends no-op. */
    public void setTopP(float topP) {
        int rc = Lib.INSTANCE.crispasr_session_set_top_p(handle, topP);
        if (rc != 0 && rc != -2) throw new IllegalStateException("set_top_p failed (rc=" + rc + ")");
    }

    /** Min-p sampling threshold. Honoured by chatterbox; other backends no-op. */
    public void setMinP(float minP) {
        int rc = Lib.INSTANCE.crispasr_session_set_min_p(handle, minP);
        if (rc != 0 && rc != -2) throw new IllegalStateException("set_min_p failed (rc=" + rc + ")");
    }

    /** Repetition penalty (1.0 = no penalty). Honoured by chatterbox. */
    public void setRepetitionPenalty(float r) {
        int rc = Lib.INSTANCE.crispasr_session_set_repetition_penalty(handle, r);
        if (rc != 0 && rc != -2) throw new IllegalStateException("set_repetition_penalty failed (rc=" + rc + ")");
    }
